--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,15 @@ requirements:
     - cmdstan
     - tqdm
 
+test:
+  imports:
+    - cmdstanpy
+  commands:
+    - pip check
+    - install_cmdstan --help
+    - install_cxx_toolchain --help
+  requires:
+    - pip
 
 about:
   home: https://mc-stan.org/users/interfaces/cmdstan.html
